--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer pagina web</title>
+    <title>Github pages</title>
 </head>
 <body>
+    <h1>Mi pagina funcionando con githubpage</h1>
     
 </body>
 </html>
